# spimdisasm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  codeAnalyzer.py  code_splits.csv  compare_all_versions.py  compare_extracted_baseroms.py  disasm_mm_overlays.sh  disasmdis.py  disassembler.py  elfObjDisasm.py  extract_actortable.py  extract_baserom.py  extract_dma.py  extract_every_baserom.sh  extract_mm_dma.py  files.txt  fixbaserom.py  mmDisasm.py  mm_code_analyze.sh  mypy.ini  pika_disasm.sh  pyproject.toml  requirements.txt  rspDisasm.py  setup.cfg  setup.py  simpleDisasm.py  singleFileDisasm.py  todo.txt  versions.txt  versions_mm.txt
.github/ISSUE_TEMPLATE/: feature_suggestion.yaml  frug_report.yml
.github/workflows/: build_and_publish_crate.yml  ci.yml  ci.yml.disable  linting.yml  (+1 more)
backend/: __init__.py
csvsplits/: boot_text.csv  code_text.csv
elf32/: Elf32File.py  Elf32StringTable.py  Elf32Syms.py  __init__.py
filelists/: OotEuropeMqDbg.json  filelist_mm_all.txt  filelist_mm_jp_1.0.txt  filelist_mm_jp_gc.txt  filelist_mm_ntsc_jp_1.0.txt  filelist_mm_pal_dbg.txt  filelist_mm_pal_gc.txt  filelist_mm_usa.txt  filelist_mm_usa_demo.txt  filelist_mm_usa_gc.txt
functionmap/: pal_mq_dbg.csv
mips/: FileSplitFormat.py  FilesHandlers.py  GlobalConfig.py  MipsBss.py  MipsContext.py  MipsData.py  MipsFile.py  MipsFileBase.py  MipsFileBoot.py  MipsFileCode.py  MipsFileGeneric.py  MipsFileOverlay.py  MipsFunction.py  MipsInstructions.py  MipsOverlay.py  MipsReloc.py  MipsRodata.py  MipsSection.py  MipsSplitEntry.py  MipsText.py  Utils.py  ZeldaCodeSplits.py  ZeldaOffsets.py  ZeldaTables.py  codeFunctionMapPalMqDbg.py
spimdisasm/: __init__.py  __main__.py
src/spimdisasm/: Cargo.toml  README.md  pyproject.toml
src/spimdisasm-disasm-elf/: Cargo.toml  README.md
src/spimdisasm-disasm-elf/src/: bin.rs  dynamic_section.rs  elf_section_type.rs  elf_symbol.rs  global_offset_table.rs  mips_reginfo.rs  parsed_elf.rs  utils.rs
src/spimdisasm/src/: README.md  address_range.rs  lib.rs  parent_segment_info.rs  rom_address.rs  rom_vram_range.rs  section_type.rs  size.rs  str_decoding.rs  traits.rs
src/spimdisasm/src/address_abstraction/: mod.rs
src/spimdisasm/src/addresses/: address_range.rs  global_offset_table.rs  gp_value.rs  mod.rs  rom.rs  rom_vram_range.rs  size.rs  user_size.rs
src/spimdisasm/src/analysis/: gpr_register_value.rs  instr_analysis_info.rs  instruction_analysis_result.rs  instruction_analyzer.rs  jr_reg_data.rs  lo_pairing_info.rs  mod.rs  preheat.rs  preheat_error.rs  reference_wrapper.rs  referenced_address.rs  referenced_label.rs  register_tracker.rs  string_guesser.rs  tracked_register_state.rs
src/spimdisasm/src/collections/: addended_ordered_map.rs  mod.rs  unordered_map.rs  unordered_set.rs
src/spimdisasm/src/config/: compiler.rs  endian.rs  global_config.rs  gp_config.rs  macro_labels.rs  mod.rs
src/spimdisasm/src/context/: context.rs  context_builder.rs  global_config.rs  mod.rs  the_context.rs
src/spimdisasm/src/context/builder/: add_global_offset_table_error.rs  add_ignored_address_range_error.rs  add_platform_symbol_error.rs  add_user_label_error.rs  add_user_segment_symbol_error.rs  add_user_symbol_error.rs  context_builder.rs  context_builder_error.rs  context_builder_finder_heater.rs  context_builder_finder_heater_overlays.rs  context_builder_overlay.rs  mod.rs  overlays_builder.rs  platform_segment_builder.rs  segment_builder.rs  segment_builder_error.rs  segment_heater.rs  segment_modifier.rs  user_segment_builder.rs
src/spimdisasm/src/metadata/: add_label_error.rs  ignored_address_range.rs  label_metadata.rs  label_metadata_name_display.rs  label_type.rs  mod.rs  overlay_category.rs  overlay_category_name.rs  parent_section_metadata.rs  platform_segment_metadata.rs  referenced_info.rs  segment_metadata.rs  symbol_metadata.rs  symbol_metadata_name_display.rs  symbol_name_generation_settings.rs  symbol_type.rs  user_label_metadata.rs  user_segment_metadata.rs  user_sym_metadata.rs
src/spimdisasm/src/migration/: func_rodata_migration.rs  mod.rs  pairing_display.rs  pairing_error.rs  rodata_iterator.rs
src/spimdisasm/src/relocation/: mod.rs  reloc_referenced_sym.rs  relocation_info.rs  relocation_type.rs
src/spimdisasm/src/relocation/python_bindings/: mod.rs  py_user_relocs.rs
src/spimdisasm/src/sections/: mod.rs  section_base.rs  section_creation_error.rs  section_data.rs  section_executable.rs  section_noload.rs  section_post_process_error.rs  section_rodata.rs  section_text.rs  trait_section.rs
src/spimdisasm/src/sections/before_proc/: data_section.rs  executable_section.rs  mod.rs  nobits_section.rs  noload_section.rs
src/spimdisasm/src/sections/preprocessed/: data_section.rs  executable_section.rs  noload_section.rs
src/spimdisasm/src/sections/processed/: data_section_processed.rs  executable_section_processed.rs  mod.rs  nobits_section_processed.rs  noload_section_processed.rs
src/spimdisasm/src/sections/python_bindings/: mod.rs  py_data_section.rs  py_executable_section.rs  py_nobits_section.rs  py_noload_section.rs
src/spimdisasm/src/symbols/: mod.rs  symbol_base.rs  symbol_creation_error.rs  symbol_data.rs  symbol_function.rs  symbol_noload.rs  symbol_post_process_error.rs  symbol_rodata.rs  trait_symbol.rs
src/spimdisasm/src/symbols/before_proc/: data_sym.rs  either_func_data_sym.rs  function_sym.rs  mod.rs  nobits_sym.rs  noload_sym.rs
src/spimdisasm/src/symbols/display/: either_func_data_display.rs  function_display.rs  internal_common.rs  mod.rs  sym_common_display.rs  sym_data_display.rs  sym_display_error.rs  sym_nobits_display.rs  sym_noload_display.rs
src/spimdisasm/src/symbols/preprocessed/: data_sym.rs  function_sym.rs  noload_sym.rs
src/spimdisasm/src/symbols/processed/: data_sym_processed.rs  either_func_data_sym_processed.rs  function_sym_processed.rs  mod.rs  nobits_sym_processed.rs  noload_sym_processed.rs
src/spimdisasm/tests/: game_tests.rs  multisection.rs  test_section_text.rs  weird_cases.rs
src/spimdisasm/tests/game_tests_info/: mod.rs
tools/: yaz0
(+174 files in other folders)
