# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/spimdisasm",
]
resolver = "2"

[workspace.package]
version = "2.0.0-dev0"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
repository = "https://github.com/Decompollaborate/spimdisasm"
license = "MIT"
# rust-version = "1.81.0"
