# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/spimdisasm",
    "src/spimdisasm-disasm-elf",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
repository = "https://github.com/Decompollaborate/spimdisasm"
license = "MIT"

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked
# cargo msrv find -- cargo check -p spimdisasm
# ```
rust-version = "1.83.0"

[profile.release]
debug = true
