# SPDX-FileCopyrightText: © 2022 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "spimdisasm"
# Version should be synced with spimdisasm/__init__.py
version = "1.11.0"
description = "MIPS disassembler"
# license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="Anghelo Carvajal", email="angheloalf95@gmail.com" },
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Decompollaborate/spimdisasm"
"Bug Tracker" = "https://github.com/Decompollaborate/spimdisasm/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
spimdisasm = "spimdisasm.frontendCommon.FrontendUtilities:cliMain"
singleFileDisasm = "spimdisasm.singleFileDisasm:disassemblerMain"
disasmdis = "spimdisasm.disasmdis:disasmdisMain"
elfObjDisasm = "spimdisasm.elfObjDisasm:elfObjDisasmMain"
rspDisasm = "spimdisasm.rspDisasm:rspDisasmMain"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.cibuildwheel]
skip = ["cp36-*"]
