# SPDX-FileCopyrightText: © 2022-2024 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "spimdisasm"
# Version should be synced with spimdisasm/__init__.py
version = "1.32.0"
description = "MIPS disassembler"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name="Anghelo Carvajal", email="angheloalf95@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",

    "License :: OSI Approved :: MIT License",

    "Topic :: Software Development :: Disassemblers",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Typing :: Typed",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/Decompollaborate/spimdisasm"
Issues = "https://github.com/Decompollaborate/spimdisasm/issues"
Changelog = "https://github.com/Decompollaborate/spimdisasm/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
spimdisasm = "spimdisasm.frontendCommon.FrontendUtilities:cliMain"
singleFileDisasm = "spimdisasm.singleFileDisasm:disassemblerMain"
disasmdis = "spimdisasm.disasmdis:disasmdisMain"
elfObjDisasm = "spimdisasm.elfObjDisasm:elfObjDisasmMain"
rspDisasm = "spimdisasm.rspDisasm:rspDisasmMain"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
spimdisasm = ["py.typed"]

[tool.cibuildwheel]
skip = ["cp36-*"]
