# SPDX-FileCopyrightText: © 2022 Decompollaborate
# SPDX-License-Identifier: MIT

[metadata]
name = spimdisasm
version = 1.7.10-dev
author = Decompollaborate
license = MIT
description = N64 MIPS disassembler
url = https://github.com/Decompollaborate/spimdisasm
project_urls =
    Source = https://github.com/Decompollaborate/spimdisasm
    Bug Tracker = https://github.com/Decompollaborate/spimdisasm/issues
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    rabbitizer>=1.3.1,<2.0.0
