# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "spimdisasm-disasm-elf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# description = ""
readme = "README.md"
# keywords = ["MIPS"]

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked
# cargo msrv find -- cargo check -p spimdisasm-disasm-elf
# ```
rust-version.workspace = true

[[bin]]
name = "spimdisasm-disasm-elf"
path = "src/bin.rs"

[features]
default = []
std = ["spimdisasm/std"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
object = { version = "0.36.7", default-features = false, features = ["std", "elf", "read_core"] }
spimdisasm = { path = "../spimdisasm" }

[dev-dependencies]
pretty_assertions = "1.4"
