# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "spimdisasm"
version.workspace = true
edition.workspace = true
# rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MIPS disassembler"
readme = "README.md"
# keywords = ["MIPS", "disassembler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spimdisasm"
path = "src/lib.rs"

[features]
default = []
std = ["rabbitizer/std"]

nightly = [] # Evil stuff, do not use.
game_tests = [] # Tests that require game roms to run
pyo3 = ["dep:pyo3", "std"] # TODO: "rabbitizer/pyo3"

[dependencies]
rabbitizer = { git = "https://github.com/Decompollaborate/rabbitizer.git", branch = "🦀" }
# rabbitizer = { path = "../../../rabbitizer/src/rabbitizer" }
polonius-the-crab = "0.4.2" # TODO: get rid of the polonius stuff when the new borrow checker has been released.
pyo3 = { version = "0.23.2", optional = true }
encoding_rs = "0.8.35"
# bitflags = { version = "2.6.0", default-features = false }

[dev-dependencies]
# criterion = { version ="0.3", features = ["html_reports"]}

# [[bench]]
# name = "instruction"
# harness = false
