# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "spimdisasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MIPS disassembler"
readme = "README.md"
# keywords = ["MIPS", "disassembler"]

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked
# cargo msrv find -- cargo check -p spimdisasm
# ```
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spimdisasm"
path = "src/lib.rs"

[features]
default = []
std = ["rabbitizer/std"]
hash_tables = ["std"]

nightly = [] # Evil stuff, do not use.
game_tests = [] # Tests that require game roms to run
pyo3 = ["std", "dep:pyo3", "rabbitizer/pyo3"]

[dependencies]
rabbitizer = { git = "https://github.com/Decompollaborate/rabbitizer.git", branch = "🦀", features = ["MIPS_IV", "all_extensions"] }
# rabbitizer = { path = "../../../rabbitizer/src/rabbitizer", features = ["MIPS_IV", "all_extensions"] }
polonius-the-crab = "0.4.2" # TODO: get rid of the polonius stuff when the new borrow checker has been released.
pyo3 = { version = "0.23.2", optional = true }
encoding_rs = "0.8.35"
bitflags = { version = "2.8.0", default-features = false }
