# SPDX-FileCopyrightText: © 2022-2024 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "spimdisasm"
# Version should be synced with spimdisasm/__init__.py
version = "2.0.0-dev0"
description = "MIPS disassembler"
readme = "README.md"
license = {file = "../../LICENSE"}
requires-python = ">=3.9"
authors = [
    { name="Anghelo Carvajal", email="angheloalf95@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",

    "License :: OSI Approved :: MIT License",

    "Topic :: Software Development :: Disassemblers",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Decompollaborate/spimdisasm"
Issues = "https://github.com/Decompollaborate/spimdisasm/issues"
Changelog = "https://github.com/Decompollaborate/spimdisasm/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3"]
cargo-extra-args = "--crate-type=cdylib"
